Toplevel: refactor toplevel wrt latest jsoo

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -1,22 +1,11 @@
-NAME=toplevel
-OBJS=toplevel.cmo
-
-all: $(NAME).js
-
 include ../Makefile.conf
 -include ../Makefile.local
 
-ifeq ($(OCAML4),"YES")
-OCAMLLIB=ocamlcommon.cma ocamlbytecomp.cma ocamltoplevel.cma
-else
-OCAMLLIB=toplevellib.cma
-endif
-
-COMPILER_LIBS=$(shell ocamlc -where)/compiler-libs
+all: toplevel.js eval.js
 
 ifeq ($(METAOCAML),1)
 BER=metalib.cma bertop.cmo
-BER_MODULE=trx runcode
+BER_EXPORT= -export-unit trx -export-unit runcode
 endif
 
 OCPINDENT=$(shell ocamlfind query ocp-indent -format "-package %p.lib" 2> /dev/null)
@@ -31,148 +20,54 @@ ifneq ($(HIGLO),)
 OPTCOMP_OPT+=-ppopt -let -ppopt higlo=true
 endif
 
-COMP=../compiler/$(COMPILER)
-JSFILES=../runtime/runtime.js ../runtime/weak.js ../runtime/toplevel.js ../runtime/graphics.js ../runtime/nat.js
-OCAMLC=ocamlfind ocamlc -package lwt,optcomp,tyxml.functor,reactiveData -syntax camlp4o $(OCPINDENT) $(HIGLO) $(OPTCOMP_OPT) -ppopt "../lib/syntax/pa_js.cmo" \
-	-I $(COMPILER_LIBS) -I ../lib -I ../compiler -I ../lib/graphics -I ../lib/tyxml
-STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma $(OCAMLLIB) $(BER) ../lib/graphics/graphics.cma ../lib/tyxml/tyxml.cma
-EXPUNGE=$(shell ocamlc -where)/expunge
-# Removed gc and sys
-STDLIB_MODULES=\
-  arg \
-  array \
-  arrayLabels \
-  buffer \
-  callback \
-  camlinternalLazy \
-  camlinternalMod \
-  camlinternalOO \
-  char \
-  complex \
-  digest \
-  filename \
-  format \
-  genlex \
-  hashtbl \
-  int32 \
-  int64 \
-  lazy \
-  lexing \
-  list \
-  listLabels \
-  map \
-  marshal \
-  moreLabels \
-  nativeint \
-  obj \
-  oo \
-  parsing \
-  pervasives \
-  printexc \
-  printf \
-  queue \
-  random \
-  scanf \
-  set \
-  sort \
-  stack \
-  stdLabels \
-  stream \
-  string \
-  stringLabels \
-  sys \
-  weak \
-  graphics \
-  bigarray \
+JSFILES=-jsopt +weak.js -jsopt +toplevel.js -jsopt +graphics.js -jsopt +nat.js
 
-#tyxml lwt react
-OTHER=\
-	html5_types \
-	lwt \
-	reactiveData \
-	react
+MKTOP=../jsoo_tools/jsoo_mktop -verbose \
+	-top-syntax lwt.syntax -top-syntax js_of_ocaml.syntax \
+	-top-syntax js_of_ocaml.deriving.syntax \
+	-top-syntax deriving.syntax.std \
+	-dont-export-unit gc \
+	-export-package graphics \
+	-export-package lwt \
+	-export-package bigarray \
+	-export-package tyxml.functor \
+	-export-package react \
+	-export-package reactiveData \
+	-export-package js_of_ocaml \
+	-export-package js_of_ocaml.deriving \
+	-export-package js_of_ocaml.tyxml \
+	-export-package js_of_ocaml.graphics \
+	-export-package js_of_ocaml.toplevel \
+	-jsopt -I -jsopt $(shell ocamlfind query tyxml) \
+	-jsopt -file -jsopt html5_types.cmi:/cmis \
+	-jsopt -file -jsopt html5_sigs.cmi:/cmis \
+  -jsopt -file -jsopt xml_wrap.cmi:/cmis \
 
-JOO=js dom typed_array dom_html dom_svg file dom_events firebug lwt_js sys_js regexp cSS url \
-  form xmlHttpRequest lwt_js_events json jsonp webGL webSockets keycode
-#JOO=js
+TOPLEVEL_NAME=toplevel
+TOPLEVEL_OBJS=toplevel.cmo
+$(TOPLEVEL_NAME).js: $(TOPLEVEL_OBJS)
+	$(MKTOP) \
+	$(BER) $(BER_EXPORT) \
+	$(OCPINDENT) $(HIGLO) \
+	$(TOPLEVEL_OBJS) \
+	$(JSFILES) -jsopt -I -jsopt ./ -jsopt -file -jsopt examples.ml \
+	-o $(TOPLEVEL_NAME).byte
 
-JOO_EXT =\
-	lwt_log_js \
-	graphics_js \
-	tyxml_js \
-	tyxml_cast \
-	tyxml_cast_sig \
+EVAL_NAME=eval
+EVAL_OBJS=eval.cmo
+$(EVAL_NAME).js: $(EVAL_OBJS)
+	$(MKTOP) $(EVAL_OBJS) $(JSFILES) -o $(EVAL_NAME).byte
 
-PERVASIVES=$(STDLIB_MODULES) $(OTHER) $(JOO) $(JOO_EXT) $(BER_MODULE) outcometree topdirs toploop
+%.cmis.js:
+	../jsoo_tools/jsoo_mkcmis $*
 
-#toplevel.byte: $(OBJS:cmx=cmo) toplevel.cmo
-#	ocamlfind ocamlc -linkall -g -package str -linkpkg toplevellib.cma -o $@.tmp $^
+server.%: server.ml
+	ocamlbuild -use-ocamlfind -package findlib,cohttp.lwt server.$*
 
-$(NAME).js: $(NAME).byte $(COMP) $(JSFILES) examples.ml
-	$(COMP) -toplevel -noruntime $(JSFILES) $(NAME).byte \
-	-I $(COMPILER_LIBS) \
-	-I $(shell ocamlfind query lwt) \
-	-I $(shell ocamlfind query tyxml) \
-	-I $(shell ocamlfind query reactiveData) \
-	-I $(shell ocamlfind query react) \
-	-I ./ -I ../lib/ -I ../lib/graphics -I ../lib/tyxml \
-	-file html5_types.cmi:/cmis -file html5_sigs.cmi:/cmis \
-	-file xml_wrap.cmi:/cmis \
-	-ofs toplevel-fs.js $(OPTIONS) -file examples.ml
-
-$(NAME).byte: $(OBJS) flush_camlp4_cb.cmo ../compiler/compiler.cma
-	$(OCAMLC) -linkall -package findlib,graphics,lwt,bigarray -linkpkg -o $@.tmp $(STDLIB) \
-	-I +camlp4 dynlink.cma camlp4lib.cma \
-	Camlp4Parsers/Camlp4OCamlRevisedParser.cmo \
-	Camlp4Parsers/Camlp4OCamlParser.cmo \
-	syntax/pa_js.cmo \
-	flush_camlp4_cb.cmo \
-	lwt-syntax-options.cma lwt-syntax.cma \
-	Camlp4Top/Top.cmo \
-	$(OBJS)
-	$(EXPUNGE) $@.tmp $@ $(PERVASIVES)
-	rm -f $@.tmp
-
-EVAL=eval
-$(EVAL).byte: $(EVAL).ml flush_camlp4_cb.cmo ../compiler/compiler.cma
-	$(OCAMLC) -linkall -package findlib,graphics,lwt,bigarray -linkpkg -o $@.tmp $(STDLIB) \
-	-I +camlp4 dynlink.cma camlp4lib.cma \
-	Camlp4Parsers/Camlp4OCamlRevisedParser.cmo \
-	Camlp4Parsers/Camlp4OCamlParser.cmo \
-	syntax/pa_js.cmo \
-	flush_camlp4_cb.cmo \
-	lwt-syntax-options.cma lwt-syntax.cma \
-	Camlp4Top/Top.cmo \
-	$(EVAL).ml
-	$(EXPUNGE) $@.tmp $@ $(PERVASIVES)
-	rm -f $@.tmp
-
-$(EVAL).js: $(EVAL).byte $(COMP) $(JSFILES) examples.ml
-	$(COMP) -toplevel -noruntime $(JSFILES) $(EVAL).byte \
-	-I $(COMPILER_LIBS) \
-	-I $(shell ocamlfind query lwt) \
-	-I $(shell ocamlfind query tyxml) \
-	-I $(shell ocamlfind query reactiveData) \
-	-I $(shell ocamlfind query react) \
-	-I ./ -I ../lib/ -I ../lib/graphics -I ../lib/tyxml \
-	-file html5_types.cmi:/cmis -file html5_sigs.cmi:/cmis \
-	-file xml_wrap.cmi:/cmis \
-	$(OPTIONS)
-
-
-%.cmo: %.ml ../compiler/compiler.cma
-	$(OCAMLC) -c $<
-
-../compiler/compiler.cma:
-	$(MAKE) -C ../compiler compiler.cma
-
-server: server.ml
-	ocamlfind ocamlc -linkpkg -package findlib,cohttp.lwt server.ml -o server
-
+%.cmo:%.ml
+	ocamlfind ocamlc -c -syntax camlp4o \
+		-package optcomp,js_of_ocaml.syntax,lwt,tyxml.functor,js_of_ocaml.toplevel \
+		$(OCPINDENT) $(HIGLO) $(OPTCOMP_OPT) \
+		$< -c $@
 clean::
-	rm -f *.cm[io] $(NAME).byte $(NAME).js
-
-depend:
-	ocamlfind ocamldep -syntax camlp4o -package optcomp -ppopt "../lib/syntax/pa_js.cmo" -I ../compiler *.ml *.mli > .depend
-
-include .depend
+	rm -f *.cm[io] *.byte *.native *.js
