--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ compiler/js_lexer.ml
 compiler/js_parser.ml
 compiler/js_parser.mli
 compiler/compiler_version.ml
+jsoo_tools/jsoo_mktop
+jsoo_tools/jsoo_mkcmis
 
 compiler/annot_lexer.ml
 compiler/annot_parser.ml
