--- a/lib/Makefile
+++ b/lib/Makefile
@@ -28,9 +28,7 @@ TYXML_CMA=tyxml/tyxml.cma
 endif
 
 ifeq ($(OCAML4),"YES")
-OCAMLLIB=ocamlcommon.cma ocamlbytecomp.cma ocamltoplevel.cma
-else
-OCAMLLIB=toplevellib.cma
+TOPLEVELLIB=toplevel/jsooTop.cmo
 endif
 
 PA_JS= syntax/pa_js.cmo
@@ -40,7 +38,8 @@ PA_JS_NDL= syntax/pa_js.cmx syntax/pa_js.cmxs
 endif
 endif
 
-all: $(LIBNAME).cma log/logger.cma toplevel/jsooTop.cmo \
+all: $(LIBNAME).cma log/logger.cma \
+	${TOPLEVELLIB} \
 	${PA_JS} ${PA_JS_NDL} \
 	${PA_DERIVING} 	${PA_DERIVING_NDL} \
 	${DERIVING_JSON} \
@@ -110,15 +109,13 @@ log/%.cmi: log/%.mli
 log/logger.cma: log/lwt_log_js.cmo
 	ocamlfind ocamlc -a -o $@ $^
 
-
-COMPILER_LIBS=$(shell ocamlc -where)/compiler-libs
 ../compiler/local/compiler.cma:
 	$(MAKE) -C ../compiler local/compiler.cma
 toplevel/jsooTop.cmo: toplevel/jsooTop.ml toplevel/jsooTop.cmi syntax/pa_js.cmo ../compiler/local/compiler.cma
 	ocamlfind ocamlc -syntax camlp4o \
 		-package lwt,lwt.syntax \
 		-ppopt syntax/pa_js.cmo \
-		-I toplevel -I ../compiler/local -I $(COMPILER_LIBS) \
+		-I toplevel -I ../compiler/local -I +compiler-libs \
 		-c $< -o $@
 
 toplevel/jsooTop.cmi: toplevel/jsooTop.mli
