--- a/Makefile.conf
+++ b/Makefile.conf
@@ -22,6 +22,7 @@ DLLEXT := .so
 
 ifeq ($(shell ocamlc -v | grep -q "version 4"; echo $$?),0)
 OCAML4:="YES"
+WITH_TOPLEVEL =YES
 endif
 
 ### Optional dependencies: deriving
@@ -31,6 +32,8 @@ WITH_GRAPHICS ?= $(shell if [ -f `ocamlfind query graphics 2> /dev/null`/graphic
 
 WITH_REACT ?= $(shell if [ -f `ocamlfind query reactiveData 2> /dev/null`/reactiveData.cma ]; then echo YES; else echo NO; fi)
 WITH_TYXML ?= $(shell if [ -f `ocamlfind query tyxml 2> /dev/null`/tyxml_f.cma ]; then echo YES; else echo NO; fi)
+
+
 
 NATDYNLINK ?= $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
 
