--- a/Makefile.toplevel
+++ b/Makefile.toplevel
@@ -1,12 +1,13 @@
 
-
+#opam pin add tyxml  git@github.com:ocsigen/tyxml.git
+BASE=lwt menhir deriving tyxml ocamlfind optcomp ocp-indent.1.4.1 higlo reactiveData react.1.1.0
 
 v-4.01.%:
 	@opam switch show
 	opam switch 4.01.$*
 	eval `opam config env`
-	opam install lwt menhir ocamlfind optcomp ocp-indent
-	$(MAKE) realclean
+	opam install $(BASE)
+	$(MAKE)
 	$(MAKE) toplevel
 	cp toplevel/toplevel.js toplevel-4.01.$*.js
 
@@ -14,8 +15,8 @@ v-4.01.0+BER:
 	@opam switch show
 	opam switch 4.01.0+BER
 	eval `opam config env`
-	opam install lwt menhir ocamlfind optcomp ocp-indent
-	$(MAKE) realclean
+	opam install $(BASE)
+	$(MAKE) METAOCAML=1
 	$(MAKE) METAOCAML=1 toplevel
 	cp toplevel/toplevel.js toplevel-4.01.0+BER.js
 
@@ -25,6 +26,6 @@ v-4.02.%:
 	eval `opam config env`
 	opam install lwt menhir ocamlfind optcomp camlp4
 	#opam reinstall ocamlfind
-	$(MAKE) realclean
+	$(MAKE)
 	$(MAKE) toplevel
 	cp toplevel/toplevel.js toplevel-4.02.$*.js
