--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,7 +1,7 @@
 FILES= 	mlString.js ieee_754.js int64.js md5.js marshal.js \
-	lexing.js parsing.js json.js bigarray.js unix.js \
+	lexing.js parsing.js bigarray.js unix.js \
 	stdlib.js io.js fs.js jslib.js jslib_js_of_ocaml.js \
-	internalMod.js gc.js
+	internalMod.js gc.js polyfill/json.js
 
 runtime.js: $(FILES)
 	echo "//concat $(FILES)" > runtime.js
