--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ lib/stubs.c
 lib/sys_js.ml
 runtime/runtime.js
 toplevel/toplevel.js
+toplevel/eval.js
 toplevel/toplevel-fs.js
+toplevel/*.cmis.js
 toplevel/server
 examples/wiki/wikicreole.ml
 examples/*/*.js
