--- a/Makefile.toplevel
+++ b/Makefile.toplevel
@@ -1,7 +1,8 @@
 
 #opam pin add tyxml  git@github.com:ocsigen/tyxml.git
 #opam pin add js_of_ocaml ./
-BASE=camlp4 lwt menhir deriving tyxml ocamlfind optcomp higlo reactiveData react.1.1.0
+BASE=camlp4 lwt menhir deriving tyxml ocamlfind optcomp higlo \
+     reactiveData react.1.1.0 base64
 
 v-4.01.%:
 	@opam switch show
