Enable safestring for 4.02
safestring2

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,6 +28,12 @@ OCAML4:="YES"
 WITH_TOPLEVEL =YES
 endif
 
+ifeq ($(shell ocamlc -v | grep -q "version 4.02"; echo $$?),0)
+SAFESTRING=-safe-string
+else
+SAFESTRING=-package bytes
+endif
+
 ### Optional dependencies: deriving
 WITH_DERIVING ?= $(shell if [ -f `ocamlfind query deriving 2> /dev/null`/deriving.cma ]; then echo YES; else echo NO; fi)
 
