--- a/ocamlbuild/Makefile
+++ b/ocamlbuild/Makefile
@@ -1,7 +1,8 @@
-OCAMLBUILD := ocamlbuild -use-ocamlfind
 
 include ../Makefile.conf
 -include ../Makefile.filelist
+
+OCAMLBUILD := ocamlbuild -use-ocamlfind -package bytes
 
 all:
 	$(OCAMLBUILD) $(OCAMLBUILD_IMPL)
