Fix ocamlbuild documentation

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -13,6 +13,9 @@ MKCMIS   := jsoo_mkcmis$(EXEEXT)
 # opt/byte
 BEST := opt
 
+
+DOCOPT := -colorize-code -short-functors -charset utf-8
+
 ####
 
 EXEEXT :=
