--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -5,7 +5,7 @@ all: $(COMPILER) $(MINIFIER)
 
 lib: compiler.cma compiler.cmxa compiler.cmxs
 
-PACKAGES=findlib
+PACKAGES=findlib,cmdliner
 
 OBJS=compiler_version.cmx \
      util.cmx pretty_print.cmx option.cmx reserved.cmx varPrinter.cmx \
@@ -19,7 +19,7 @@ OBJS=compiler_version.cmx \
      linker.cmx parse_bytecode.cmx generate.cmx driver.cmx \
      pseudoFs.cmx
 
-COMPOBJS=$(OBJS) compile.cmx
+COMPOBJS=$(OBJS) commonArg.cmx compileArg.cmx compile.cmx
 
 $(COMPILER): compile.$(BEST)
 	mv -f $< $@
@@ -34,9 +34,9 @@ compile.byte: $(COMPOBJS:cmx=cmo)
 compile.opt: $(COMPOBJS)
 	ocamlfind ocamlopt $(SAFESTRING) -package $(PACKAGES) -linkpkg -g -o $@ $^
 
-minify.byte: $(OBJS:cmx=cmo) minify.cmo
+minify.byte: $(OBJS:cmx=cmo) commonArg.cmo minifyArg.cmo minify.cmo
 	ocamlfind ocamlc $(SAFESTRING) -package $(PACKAGES) -linkpkg -o $@ $^
-minify.opt: $(OBJS:cmx=cmx) minify.cmx
+minify.opt: $(OBJS:cmx=cmx) commonArg.cmx minifyArg.cmx minify.cmx
 	ocamlfind ocamlopt $(SAFESTRING) -package $(PACKAGES) -linkpkg -g -o $@ $^
 
 
