--- a/examples/boulderdash/Makefile
+++ b/examples/boulderdash/Makefile
@@ -1,4 +1,4 @@
 OBJS=boulderdash.cmo
 NAME=boulderdash
-OPTIONS=-I ../../examples/boulderdash/ -file maps.txt:/ -file maps:/
+OPTIONS=-I ../../examples/boulderdash/ --file maps.txt:/ --file maps:/
 include ../Makefile.common
