--- a/examples/hyperbolic/Makefile
+++ b/examples/hyperbolic/Makefile
@@ -1,5 +1,5 @@
 OBJS=hypertree.cmo
 NAME=hypertree
-OPTIONS=-I ../../examples/hyperbolic -file image_info.json:/ -file messages.json:/ -file tree.json:/
+OPTIONS=-I ../../examples/hyperbolic --file image_info.json:/ --file messages.json:/ --file tree.json:/
 
 include ../Makefile.common
