--- a/examples/webgl/Makefile
+++ b/examples/webgl/Makefile
@@ -1,5 +1,5 @@
 OBJS=webgldemo.cmo
 NAME=webgldemo
-OPTIONS=-I ../../examples/webgl -file monkey.model:/
+OPTIONS=-I ../../examples/webgl --file monkey.model:/
 
 include ../Makefile.common
