Better detect safe-string compat

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -28,7 +28,7 @@ OCAML4:="YES"
 WITH_TOPLEVEL =YES
 endif
 
-ifeq ($(shell ocamlc -v | grep -q "version 4.02"; echo $$?),0)
+ifeq ($(shell ocamlc -safe-string 2> /dev/null ; echo $$?),0)
 SAFESTRING=-safe-string
 else
 SAFESTRING=-package bytes
