--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ compiler/compiler_version.ml
 compiler/man
 jsoo_tools/jsoo_mktop
 jsoo_tools/jsoo_mkcmis
+jsoo_tools/jsoo_mktop.opt
+jsoo_tools/jsoo_mkcmis.opt
 compiler/util.ml
 compiler/annot_lexer.ml
 compiler/annot_parser.ml
