Fix installation on Ocaml 3.x (fixes  #241)

--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -1,6 +1,8 @@
 BIN := compiler/${COMPILER} compiler/${MINIFIER}
 
-TOOLS := jsoo_tools/${MKTOP} jsoo_tools/${MKCMIS}
+ifeq "${WITH_TOPLEVEL}" "YES"
+BIN += jsoo_tools/${MKTOP} jsoo_tools/${MKCMIS}
+endif
 
 INTF := lib/*.cmi
 
