--- a/Makefile.toplevel
+++ b/Makefile.toplevel
@@ -1,7 +1,7 @@
 
 #opam pin add tyxml  git@github.com:ocsigen/tyxml.git
 #opam pin add js_of_ocaml ./
-BASE=camlp4 lwt menhir deriving tyxml ocamlfind optcomp higlo \
+BASE=camlp4 lwt menhir deriving tyxml ocamlfind cppo higlo \
      reactiveData react.1.2.0 base64 ocp-indent.1.4.2
 
 current:
