--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ benchmarks/build
 benchmarks/results
 benchmarks/config
 lib/deriving_json/deriving_Json_lexer.ml
+lib/ppx/ppx_js.ml
+lib/ppx/ppx_js
 Makefile.local
 
 # OCamlbuild dir
